@@ -1,3 +1,10 @@
+2008-04-11  Michael Hutchinson <mhutchinson@novell.com> 
+
+	* MonoDevelop.Html/HtmlSchema.cs: Avoid unused variable warning.
+	* gtk-gui/gui.stetic: Updated.
+	* MonoDevelop.AspNet.Parser/AspNetIndentStack.cs: Woked on indent
+	  stack. Not complete yet.
+
 2008-04-11  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* MonoDevelop.AspNet.addin.xml: Use the new mime type extension to
